# home-core

./: .cursorrules  .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  eslint.config.cjs  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  railway-vars.example.txt  turbo.json
.changeset/: config.json
.claude/: settings.json  settings.worktree.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: llm_task.yml
.github/workflows/: ci.yml  publish.yml
apps/api/: .env.example  .eslintrc.js  Dockerfile  package.json  tsconfig.json  vitest.config.ts
apps/api/src/: index.ts
apps/api/src/middleware/: auth.ts
apps/api/src/providers/: anthropic.ts  gemini.ts  index.ts  openai.ts  registry.ts  types.ts
apps/api/src/routes/: documents.ts  health.ts  owner-aliases.ts  providers.ts  settings.ts  user.ts  vision.ts
apps/api/src/scripts/: process-documents.ts  test-image-resize.ts
apps/api/src/services/: document-storage.ts  firebase-admin.ts  image-resize.ts  llm-cache.ts  owner-alias-service.ts  settings-service.ts  thumbnail.ts
apps/api/src/utils/: data-url.ts  route-builder.ts  string-sanitize.test.ts  string-sanitize.ts
apps/doc-processor/: .gitignore  Dockerfile  package.json  pyproject.toml  setup.sh
apps/doc-processor/src/: __init__.py  config.py  main.py
apps/doc-processor/src/models/: __init__.py  schemas.py
apps/doc-processor/src/processors/: __init__.py  face.py  face_cache.py  ocr.py  pdf.py
apps/doc-processor/tests/: __init__.py  test_api.py  test_processors.py
apps/web/: index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  index.css  version.ts
apps/web/src/components/: Button.tsx  DropZone.tsx  (+14 more)
docs/: ARCHITECTURE.md  DOC_PROCESSOR_PLAN.md
docs/llm/: TASK_TEMPLATES.md
e2e/: home.spec.ts
scripts/: _common.sh  bootstrap.sh  dev-worktree.sh  dev.sh  setup.sh  with-env.sh  worktree-add.sh
(+30 files in other folders)
