[project]
name = "doc-processor"
version = "0.1.0"
description = "Document processing service for PDF and image text extraction"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pymupdf>=1.24.0",
    "easyocr>=1.7.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "torch>=2.0.0,<2.2.0",  # 2.2+ dropped macOS x86_64 support
    "numpy<2",  # torch 2.1.x requires numpy 1.x
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "pyright>=1.1.0",
]

# Use CPU-only PyTorch (saves ~1.5GB in Docker image)
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
